2013-08-27 Riccardo Mottola <rm@gnu.org>

	* Modules/Themes/Themes.m
	* Modules/TimeZone/TimeZone.m
	Refer to Bundle using NSPreferencePane accessor

2013-08-26 Riccardo Mottola <rm@gnu.org>

	* Modules/Defaults/Defaults.m
	* Modules/Defaults/GNUmakefile
	* Modules/Defaults/Resources/English.lproj/Defaults.plist
	Allow localization of each preference, keyed by defaults name.

2013-08-09 Riccardo Mottola <rm@gnu.org>

	* Modules/Defaults/Defaults.h
	* Modules/Defaults/Defaults.m
	* Modules/Defaults/Resources/English.lproj/Defaults.gorm
	* Modules/Defaults/Resources/English.lproj/Defaults.plist
	Add editor for lists and use it for Interface Styles.

2013-02-07 Fred Kiefer <FredKiefer@gmx.de>

	* Modules/Themes/Themes.m: Don't set a nil authors string.

2013-02-07 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Modules/Defaults/Defaults.m
	* Modules/Volumes/Volumes.m
	* SystemPreferences/SystemPreferences.m
	  NS(U)Integer conversions

2012-03-23 Riccardo Mottola <rm@gnu.org>

	* SystemPreferences/SystemPreferences.h
	Fix warning.

2012-01-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist: Add new
	user defaults for sticky app icons and mini windows, respectively.

2011-11-18 Riccardo Mottola <rm@gnu.org>

	* Modules/Themes/no_preview.tiff
	* Modules/Themes/gnustep_preview_128.tiff
	* Modules/Themes/Themes.tiff
	Resampled to 72 dpi

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Volumes/Volumes.m (-mtypeMatrixAction:,
	-mpointButtAction:, -controlTextDidChange:): Improve UI validation
	of the buttons in the Volumes system preferences panel.

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Defaults/Defaults.m (-mainViewDidLoad): Disable
	editing for the description string.

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist:
	Add user default that allows placing app icons and mini windows at
	normal window level.
